@@ -8,8 +8,6 @@ license             = Perl_5
 -phase = runtime
 -relationship = requires
 Dist::Zilla = 5.038
-Dist::Zilla::Plugin::RewriteVersion::Transitional = 0.004
-Dist::Zilla::Plugin::Git::NextVersion = 0
 ;Dist::Zilla::Plugin::EnsurePrereqsInstalled = 0
 Dist::Zilla::Plugin::PromptIfStale = 0.004
 Dist::Zilla::Plugin::ExecDir = 0
@@ -42,7 +40,6 @@ Dist::Zilla::Plugin::Test::CleanNamespaces = 0.006
 Dist::Zilla::Plugin::ManifestSkip = 0
 Dist::Zilla::Plugin::Git::Describe = 0.004
 Dist::Zilla::Plugin::PodWeaver = 4.005
-Dist::Zilla::Plugin::NextRelease = 5.033
 Dist::Zilla::Plugin::AutoMetaResources = 0
 Dist::Zilla::Plugin::Authority = 1.009
 Dist::Zilla::Plugin::MetaNoIndex = 0
@@ -72,13 +69,22 @@ Dist::Zilla::Plugin::CheckPrereqsIndexed = 0.019
 Dist::Zilla::Plugin::TestRelease = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
 Dist::Zilla::Plugin::CopyFilesFromRelease = 0
+; Dist::Zilla::PluginBundle::Git::VersionManager = 0    ; currently bundled with this distribution
 Dist::Zilla::Plugin::Run::AfterRelease = 0.038
-Dist::Zilla::Plugin::Git::Commit = 2.020
-Dist::Zilla::Plugin::Git::Tag = 0
-Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0.004
 Dist::Zilla::Plugin::Git::Push = 0
 Dist::Zilla::Plugin::CheckIssues = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
+
+[Prereqs / for @Git::VersionManager]
+-phase = runtime
+-relationship = requires
+Dist::Zilla::Plugin::RewriteVersion::Transitional = 0.004
+Dist::Zilla::Plugin::Git::NextVersion = 0
+Dist::Zilla::Plugin::CopyFilesFromRelease = 0
+Dist::Zilla::Plugin::Git::Commit = 2.020
+Dist::Zilla::Plugin::Git::Tag = 0
+Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0.004
+Dist::Zilla::Plugin::NextRelease = 5.033
 
 ; these should all be injected by the plugins themselves; patches are pending.
 [Prereqs / dzil plugin bundle (indirect)]
@@ -201,6 +207,10 @@ file = share/profiles/github/profile.ini
 root = share/profiles/github
 prefix = share/profiles/default
 
+[FileFinder::Filter / skip_versionless_modules]
+finder = :InstallModules
+skip = lib/Dist/Zilla/PluginBundle/Git/VersionManager.pm
+
 [@Author::ETHER]
 ; FIXME: Module.pm in profiles/ does not have parsable pod nor resolvable URIs
 ; It should be ignorable -- these plugins should be updated so they use
@@ -216,6 +226,8 @@ Test::ReportPrereqs.include[1] = Pod::Elemental::PerlMunger
 ModuleBuildTiny.static = no ; [CheckBin]
 StaticInstall.mode = off    ; [CheckBin]
 AutoPrereqs.skip = ^(HTTP::Tiny|LWP::UserAgent)$
+RewriteVersion::Transitional.finder = skip_versionless_modules
+BumpVersionAfterRelease.finder = skip_versionless_modules
 
 [Test::CheckBreaks]
 :version = 0.017
