@@ -59,7 +59,7 @@ cmp_deeply(
         all(
             methods(
                 [ isa => 'Dist::Zilla::Plugin::CopyFilesFromRelease' ] => bool(1),
-                plugin_name => re(qr{^\@Author::ETHER/([^/]+/)?copy Changes$}),
+                plugin_name => re(qr{^\@Author::ETHER/([^/]+/)?CopyFilesFromRelease$}),
             ),
             listmethods(
                 filename => [ 'Changes' ],
